@@ -1,3 +1,4 @@
 #pragma once
 
+#include "fmtio_concepts.h"
 #include "fmtio_impl.h"
